Alignment fixes

--- a/src/funding/paypal/style.scoped.scss
+++ b/src/funding/paypal/style.scoped.scss
@@ -6,7 +6,7 @@
 
     * {
         display: inline-block;
-        vertical-align: top;
+        vertical-align: middle;
         height: 100%;
     }
 
